<resources>
    <string name="com.crashlytics.android.build_id">b9f22f13-6ee7-4a41-bcd5-b85f4b36ca60</string>
    <string name="API_MY_LOCATION_ACCURACY">"My Location 
Accurate to {0} meters"</string>
    <string name="API_OUTDATED_WARNING">This app uses an outdated version of Maps. It might not work properly.</string>
    <string name="BACK_TO_LIST">Back to list</string>
    <string name="CLOSE_SOFTKEY">Close</string>
    <string name="COMPASS_ALT_TEXT">Compass</string>
    <string name="LEVEL_ALT_TEXT">Level {0}</string>
    <string name="MY_LOCATION_ALT_TEXT">My Location</string>
    <string name="YOUR_LOCATION">Your current location</string>
    <string name="ZOOM_IN_ALT_TEXT">Zoom in</string>
    <string name="ZOOM_OUT_ALT_TEXT">Zoom out</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="about">About</string>
    <string name="about_you">About You</string>
    <string name="accept_or_ignore">Accept or Ignore?</string>
    <string name="accepted">Accepted</string>
    <string name="active_female">Active</string>
    <string name="active_male">Active</string>
    <string name="activity">Activity</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_friend">Add %s</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_friends_details">Match with your friends</string>
    <string name="add_friends_to_matches">Match with Friends</string>
    <string name="albums">Albums</string>
    <string name="app_feedback">I have some feedback!</string>
    <string name="app_id">464891386855067</string>
    <string name="app_name">Tinder</string>
    <string name="app_review">Loving it, let me rate it!</string>
    <string name="app_settings">App Settings</string>
    <string name="app_settings_details">Notifications, account, and more</string>
    <string name="are_you_sure_follow">Are you sure you want to follow %s?</string>
    <string name="are_you_sure_report" formatted="false">Are you sure you want to report %s for %s?</string>
    <string name="ask_block">Are you sure you want to unmatch %s?</string>
    <string name="ask_me">Ask Me</string>
    <string name="birthdate">Birthdate:</string>
    <string name="block">Unmatch</string>
    <string name="block_failed">Unmatch failed!</string>
    <string name="blocked">Unmatched!</string>
    <string name="btn_main_matches">Button Main Matches</string>
    <string name="btn_main_menu">Button Main Menu</string>
    <string name="btn_main_moments">Button Main Moments</string>
    <string name="btn_moment_send">Button Moment Send</string>
    <string name="btn_shoot">Button Shoot</string>
    <string name="camera_flash_mode">FLASH MODE</string>
    <string name="camera_not_available">The camera was unavailable, another app may currently be using it.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="change_my_tinder_id">Change My Tinder ID</string>
    <string name="checkBox_discover">Discover</string>
    <string name="checkBox_females">Show Me: Women</string>
    <string name="checkBox_males">Show Me: Men</string>
    <string name="chill">Chill</string>
    <string name="choose_country">Choose A Country</string>
    <string name="claim_id">Claim ID</string>
    <string name="coal">Coal</string>
    <string name="code_sent">Verification code sent to %s</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_next">Next question</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="com_mixpanel_android_previous">Previous question</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_connections_body">We compare your Facebook friends with those of your matches to display any common connections.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="discover_prefs">Discovery Preferences</string>
    <string name="discover_prefs_details">Change who you see, or hide yourself.</string>
    <string name="discover_up">Back</string>
    <string name="females">Women</string>
    <string name="limit_search_to">Search Distance:</string>
    <string name="main_settings_faq">Need Help?</string>
    <string name="main_settings_faq_details">FAQ, contact and more</string>
    <string name="males">Men</string>
    <string name="moment_dialog_hide_moments">"Hide %s's Moments"</string>
    <string name="moment_dialog_send_message">Like Moment &amp; Message %s</string>
    <string name="my_moments">My Moments</string>
    <string name="report">Report</string>
    <string name="seekBar_ages">Show Ages</string>
    <string name="seekBar_distance">Search Distance</string>
    <string name="settings_disclaimer">Tinder uses these preferences to suggest potential matches. Some match suggestions may not fall within your desired parameters.</string>
    <string name="share_tinder">Share Tinder</string>
    <string name="share_tinder_details">Sharing is caring</string>
    <string name="show_ages">Show Ages:</string>
    <string name="show_in_discover">Discovery</string>
    <string name="show_in_discover_disclaimer">Disabling discovery prevents others from seeing your card. This has no effect on your existing matches.</string>
    <string name="show_me">Show Me:</string>
    <string name="text_ages">Show Ages text</string>
    <string name="text_distance">Search Distance text</string>
    <string name="text_show_me">Show Me: text</string>
    <string name="text_tab_activity">Activity Tab</string>
    <string name="text_tab_my_moments">My Moments Tab</string>
    <string name="view_profile">View Profile</string>
    <string name="yrs">yrs</string>
</resources>