<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/discover_prefs_actionbar_menu" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/actionbar_size" android:layout_alignParentTop="true">
        <ImageButton android:id="@id/view_back_icon" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_xsmall" android:layout_marginRight="@dimen/margin_xsmall" android:src="@drawable/selector_actionbar_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/discover_up" />
        <ImageButton android:id="@id/view_ab_icon" android:background="@null" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/selector_ab_discover_prefs" android:layout_toRightOf="@id/view_back_icon" android:layout_centerVertical="true" />
        <com.tinder.views.CustomTextView android:id="@id/discover_prefs_txt_title" android:text="@string/discover_prefs" android:layout_toRightOf="@id/view_ab_icon" app:font="regular" style="@style/ab_text" />
        <View android:id="@id/ab_divider" android:visibility="visible" android:layout_alignParentBottom="true" style="@style/ab_divider" />
    </RelativeLayout>
    <ScrollView android:background="@color/gray_background_light" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/discover_prefs_actionbar_menu">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_med" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:background="@drawable/settings_button" android:paddingLeft="@dimen/padding_med" android:paddingRight="@dimen/padding_settings_show_me" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.tinder.views.CustomCheckBox android:gravity="left" android:id="@id/checkBox_discover" android:paddingLeft="@dimen/padding_med" android:paddingTop="@dimen/padding_small" android:paddingBottom="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/show_in_discover" android:drawableRight="@drawable/selector_checkbox" android:contentDescription="@string/checkBox_discover" app:font="light|light_italic" style="@style/settings_item_text" />
            </LinearLayout>
            <com.tinder.views.CustomTextView android:textSize="@dimen/text_xsmall" android:textColor="@color/text_dark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_large" android:layout_marginTop="@dimen/margin_xsmall" android:layout_marginRight="@dimen/margin_large" android:layout_marginBottom="@dimen/margin_small" android:text="@string/show_in_discover_disclaimer" app:font="light|light_italic" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.tinder.views.CustomTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_me" app:font="light|light_italic" style="@style/settings_header" />
                <com.tinder.views.CustomTextView android:id="@id/textView_show_me" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:contentDescription="@string/text_show_me" app:font="semi_bold" style="@style/settings_header" />
            </RelativeLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/linearLayout_sex" android:background="@drawable/settings_button" android:paddingTop="@dimen/padding_small" android:paddingRight="@dimen/padding_settings_show_me" android:paddingBottom="@dimen/padding_small" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xsmall">
                <com.tinder.views.CustomCheckBox android:gravity="left" android:id="@id/checkBox_males" android:paddingLeft="@dimen/padding_med" android:paddingTop="@dimen/padding_med" android:paddingBottom="@dimen/settings_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/males" android:drawableRight="@drawable/selector_checkbox" android:contentDescription="@string/checkBox_males" app:font="light|light_italic" style="@style/settings_item_text" />
                <View android:background="@color/actionbar_divider_dropShadowDark" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/margin_small" />
                <com.tinder.views.CustomCheckBox android:gravity="left" android:id="@id/checkBox_females" android:paddingLeft="@dimen/padding_med" android:paddingTop="@dimen/settings_button_padding" android:paddingBottom="@dimen/padding_med" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/females" android:drawableRight="@drawable/selector_checkbox" android:contentDescription="@string/checkBox_females" app:font="light|light_italic" style="@style/settings_item_text" />
            </LinearLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large">
                <com.tinder.views.CustomTextView android:id="@id/textView_distance_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/limit_search_to" app:font="light|light_italic" style="@style/settings_header" />
                <com.tinder.views.CustomTextView android:id="@id/textView_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:contentDescription="@string/text_distance" app:font="semi_bold" style="@style/settings_header" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/linearLayout_distance" android:layout_width="fill_parent" android:layout_height="@dimen/button_height_large" android:layout_marginTop="@dimen/margin_xsmall" style="@style/settings_item_seekbar">
                <SeekBar android:gravity="center" android:id="@id/seekBar_distance" android:layout_width="fill_parent" android:layout_height="wrap_content" android:progress="1" android:progressDrawable="@drawable/progressbar_drawable" android:thumb="@drawable/selector_thumb_slider" android:layout_centerInParent="true" android:contentDescription="@string/seekBar_distance" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large">
                <com.tinder.views.CustomTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_ages" app:font="light|light_italic" style="@style/settings_header" />
                <com.tinder.views.CustomTextView android:id="@id/textView_years" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_xsmall" android:text="@string/yrs" android:layout_alignParentRight="true" android:contentDescription="@string/text_ages" app:font="semi_bold" style="@style/settings_header" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/relativeLayout_age" android:layout_width="fill_parent" android:layout_height="@dimen/button_height_large" android:layout_marginTop="@dimen/margin_xsmall" style="@style/settings_item_seekbar">
                <View android:background="@color/gray_progress_bar" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/height_separator" android:layout_centerInParent="true" android:contentDescription="@string/seekBar_ages" />
                <RelativeLayout android:gravity="center" android:id="@id/relativeLayout_age_slider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" />
            </RelativeLayout>
            <com.tinder.views.CustomTextView android:textSize="@dimen/text_xsmall" android:textColor="@color/text_dark" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_large" android:layout_marginTop="@dimen/margin_xsmall" android:layout_marginRight="@dimen/margin_large" android:layout_marginBottom="@dimen/margin_small" android:text="@string/settings_disclaimer" app:font="light|light_italic" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>