<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:orientation="horizontal" android:id="@id/relative_settings_header" android:layout_width="fill_parent" android:layout_height="@dimen/settings_header_height">
                <ImageView android:id="@id/img_header_background" android:layout_width="fill_parent" android:layout_height="@dimen/settings_header_height" android:src="@color/transparent" />
                <View android:background="@color/header_bg_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <LinearLayout android:gravity="center" android:id="@id/linear_settings_avatar_holder" android:background="@drawable/rounded_white_bg" android:layout_width="@dimen/settings_avatar_holder_length" android:layout_height="@dimen/settings_avatar_holder_length" android:layout_marginLeft="@dimen/margin_large" android:layout_centerVertical="true">
                    <com.tinder.views.RoundImageView android:layout_gravity="center" android:id="@id/img_settings_avatar" android:layout_width="@dimen/settings_avatar_length" android:layout_height="@dimen/settings_avatar_length" android:scaleType="centerCrop" app:defaultStyle="circle" />
                </LinearLayout>
                <com.tinder.views.CustomTextView android:textSize="@dimen/nav_menu_name_text_size" android:textColor="@color/white" android:id="@id/txt_settings_my_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_med" android:layout_toRightOf="@id/linear_settings_avatar_holder" android:layout_above="@id/div" app:font="semi_bold" />
                <View android:id="@id/div" android:layout_width="1.0dip" android:layout_height="1.0dip" android:layout_centerVertical="true" />
                <com.tinder.views.CustomTextView android:textSize="@dimen/text_small" android:textColor="@color/white" android:id="@id/txt_view_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_med" android:text="@string/view_profile" android:layout_toRightOf="@id/linear_settings_avatar_holder" android:layout_below="@id/div" app:font="regular" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/relative_discover_prefs" style="@style/settings_option_container">
                <ImageView android:id="@id/img_discover_icon" android:layout_width="@dimen/settings_icon_length" android:layout_height="@dimen/settings_icon_length" android:src="@drawable/selector_nav_discovery" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_toRightOf="@id/img_discover_icon" android:layout_centerVertical="true">
                    <com.tinder.views.CustomTextView android:id="@id/txt_discover_title" android:text="@string/discover_prefs" app:font="semi_bold" style="@style/settings_option_title_text" />
                    <com.tinder.views.CustomTextView android:text="@string/discover_prefs_details" app:font="regular" style="@style/settings_option_details_text" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/gray_background_light" android:layout_width="fill_parent" android:layout_height="@dimen/nav_divider_height" />
            <RelativeLayout android:id="@id/relative_app_settings" style="@style/settings_option_container">
                <ImageView android:id="@id/img_app_settings_icon" android:layout_width="@dimen/settings_icon_length" android:layout_height="@dimen/settings_icon_length" android:src="@drawable/selector_nav_settings" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_toRightOf="@id/img_app_settings_icon" android:layout_centerVertical="true">
                    <com.tinder.views.CustomTextView android:id="@id/txt_settings_title" android:text="@string/app_settings" app:font="semi_bold" style="@style/settings_option_title_text" />
                    <com.tinder.views.CustomTextView android:text="@string/app_settings_details" app:font="regular" style="@style/settings_option_details_text" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/gray_background_light" android:layout_width="fill_parent" android:layout_height="@dimen/nav_divider_height" />
            <RelativeLayout android:id="@id/relative_faq" style="@style/settings_option_container">
                <ImageView android:id="@id/img_contact_tinder_icon" android:layout_width="@dimen/settings_icon_length" android:layout_height="@dimen/settings_icon_length" android:src="@drawable/selector_nav_messages" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_toRightOf="@id/img_contact_tinder_icon" android:layout_centerVertical="true">
                    <com.tinder.views.CustomTextView android:id="@id/txt_contact_tinder_title" android:text="@string/main_settings_faq" app:font="semi_bold" style="@style/settings_option_title_text" />
                    <com.tinder.views.CustomTextView android:text="@string/main_settings_faq_details" app:font="regular" style="@style/settings_option_details_text" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/gray_background_light" android:layout_width="fill_parent" android:layout_height="@dimen/nav_divider_height" />
            <RelativeLayout android:id="@id/relative_share_tinder" style="@style/settings_option_container">
                <ImageView android:id="@id/img_share_tinder_icon" android:layout_width="@dimen/settings_icon_length" android:layout_height="@dimen/settings_icon_length" android:src="@drawable/selector_nav_invite" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_toRightOf="@id/img_share_tinder_icon" android:layout_centerVertical="true">
                    <com.tinder.views.CustomTextView android:id="@id/txt_share_tinder_title" android:text="@string/share_tinder" app:font="semi_bold" style="@style/settings_option_title_text" />
                    <com.tinder.views.CustomTextView android:text="@string/share_tinder_details" app:font="regular" style="@style/settings_option_details_text" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/gray_background_light" android:layout_width="fill_parent" android:layout_height="@dimen/nav_divider_height" />
            <com.tinder.views.DevControls android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_med" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>